--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,28 @@
-.App {
-  font-family: sans-serif;
-  text-align: center;
+body,
+html {
+	height: 100vh;
+	margin: 0;
+	padding: 0;
+	width: 100vw;
+}
+
+.app {
+	align-items: center;
+	box-sizing: border-box;
+	display: flex;
+	flex-direction: column;
+	font-family: sans-serif;
+	justify-content: center;
+	padding: 20px 0;
+	text-align: center;
+}
+
+.logo {
+	margin-bottom: 24px;
+	width: 300px;
+}
+
+.item-deleted {
+	color: red;
+	text-decoration: line-through;
 }
